syntax = "proto3";
package slp.rpc.voice_lover;

import "slp/plugin/option.proto";

import "rpc/voice_lover/voice_lover_message.proto";
import "rpc/voice_lover/voice_lover_admin_message.proto";

/*
user_profile rpc 协议
*/

option go_package = "github.com/olaola-chat/slp-proto/rpcclient/voice_lover";


service VoiceLoverAdmin {
  option (slp.plugin.rbp_service).name = "Functor.VoiceLover.Admin";

  rpc GetAudioDetail (rbp.rpc.voice_lover.ReqGetAudioDetail) returns (rbp.rpc.voice_lover.ResGetAudioDetail);
  //是否需要实名认证
  rpc UpdateAudio (rbp.rpc.voice_lover.ReqUpdateAudio) returns (rbp.rpc.voice_lover.ResBase);

  rpc AuditAudio (rbp.rpc.voice_lover.ReqAuditAudio) returns (rbp.rpc.voice_lover.ResAuditAudio);

  rpc CreateAlbum (rbp.rpc.voice_lover.ReqCreateAlbum) returns (rbp.rpc.voice_lover.ResCreateAlbum);

  rpc UpdateAlbum (rbp.rpc.voice_lover.ReqUpdateAlbum) returns (rbp.rpc.voice_lover.ResUpdateAlbum);

  rpc DelAlbum (rbp.rpc.voice_lover.ReqDelAlbum) returns (rbp.rpc.voice_lover.ResDelAlbum);

  rpc GetAlbumList (rbp.rpc.voice_lover.ReqGetAlbumList) returns (rbp.rpc.voice_lover.ResGetAlbumList);

  rpc GetAlbumDetail (rbp.rpc.voice_lover.ReqGetAlbumDetail) returns (rbp.rpc.voice_lover.ResGetAlbumDetail);

  rpc AudioCollect (rbp.rpc.voice_lover.ReqAudioCollect) returns (rbp.rpc.voice_lover.ResAudioCollect);

  rpc CreateSubject (rbp.rpc.voice_lover.ReqCreateSubject) returns (rbp.rpc.voice_lover.ResCreateSubject);

  rpc DelSubject (rbp.rpc.voice_lover.ReqDelSubject) returns (rbp.rpc.voice_lover.ResDelSubject);

  rpc UpdateSubject (rbp.rpc.voice_lover.ReqUpdateSubject) returns (rbp.rpc.voice_lover.ResUpdateSubject);

  rpc GetSubjectDetail (rbp.rpc.voice_lover.ReqGetSubjectDetail) returns (rbp.rpc.voice_lover.ResGetSubjectDetail);

  rpc GetSubjectList (rbp.rpc.voice_lover.ReqGetSubjectList) returns (rbp.rpc.voice_lover.ResGetSubjectList);

  rpc GetAlbumCollect (rbp.rpc.voice_lover.ReqGetAlbumCollect) returns (rbp.rpc.voice_lover.ResGetAlbumCollect);

  rpc AlbumCollect (rbp.rpc.voice_lover.ReqAlbumCollect) returns (rbp.rpc.voice_lover.ResAlbumCollect);

  rpc AlbumChoice (rbp.rpc.voice_lover.ReqAlbumChoice) returns (rbp.rpc.voice_lover.ResAlbumChoice);

  rpc GetAlbumChoice (rbp.rpc.voice_lover.ReqGetAlbumChoice) returns (rbp.rpc.voice_lover.ResGetAlbumChoice);

  rpc GetBannerList (rbp.rpc.voice_lover.ReqGetBannerList) returns (rbp.rpc.voice_lover.ResGetBannerList);

  rpc CreateBanner (rbp.rpc.voice_lover.ReqCreateBanner) returns (rbp.rpc.voice_lover.ResCreateBanner);

  rpc UpdateBanner (rbp.rpc.voice_lover.ReqUpdateBanner) returns (rbp.rpc.voice_lover.ResUpdateBanner);

  rpc GetBannerDetail (rbp.rpc.voice_lover.ReqGetBannerDetail) returns (rbp.rpc.voice_lover.ResGetBannerDetail);

  rpc AdminAudioList (rbp.rpc.voice_lover.ReqAdminAudioList) returns (rbp.rpc.voice_lover.ResAdminAudioList);

  rpc AdminAudioDetail (rbp.rpc.voice_lover.ReqAdminAudioDetail) returns (rbp.rpc.voice_lover.ResAdminAudioDetail);

  rpc AdminAudioUpdate (rbp.rpc.voice_lover.ReqAdminAudioUpdate) returns (rbp.rpc.voice_lover.ResAdminAudioUpdate);

  rpc AdminAudioAudit (rbp.rpc.voice_lover.ReqAdminAudioAudit) returns (rbp.rpc.voice_lover.ResAdminAudioAudit);

  rpc AdminAudioAuditReason (rbp.rpc.voice_lover.ReqAdminAudioAuditReason) returns (rbp.rpc.voice_lover.ResAdminAudioAuditReason);

  rpc AdminAlbumCreate (rbp.rpc.voice_lover.ReqAdminAlbumCreate) returns (rbp.rpc.voice_lover.ResAdminAlbumCreate);

  rpc AdminAlbumDel (rbp.rpc.voice_lover.ReqAdminAlbumDel) returns (rbp.rpc.voice_lover.ResAdminAlbumDel);

  rpc AdminAlbumUpdate (rbp.rpc.voice_lover.ReqAdminAlbumUpdate) returns (rbp.rpc.voice_lover.ResAdminAlbumUpdate);

  rpc AdminAlbumDetail (rbp.rpc.voice_lover.ReqAdminAlbumDetail) returns (rbp.rpc.voice_lover.ResAdminAlbumDetail);

  rpc AdminAlbumList (rbp.rpc.voice_lover.ReqAdminAlbumList) returns (rbp.rpc.voice_lover.ResAdminAlbumList);

  rpc AdminAudioCollectList (rbp.rpc.voice_lover.ReqAdminAudioCollectList) returns (rbp.rpc.voice_lover.ResAdminAudioCollectList);

  rpc AdminAudioCollect (rbp.rpc.voice_lover.ReqAdminAudioCollect) returns (rbp.rpc.voice_lover.ResAdminAudioCollect);

  rpc AdminSubjectCreate (rbp.rpc.voice_lover.ReqAdminSubjectCreate) returns (rbp.rpc.voice_lover.ResAdminSubjectCreate);

  rpc AdminSubjectUpdate (rbp.rpc.voice_lover.ReqAdminSubjectUpdate) returns (rbp.rpc.voice_lover.ResAdminSubjectUpdate);

  rpc AdminSubjectDel (rbp.rpc.voice_lover.ReqAdminSubjectDel) returns (rbp.rpc.voice_lover.ResAdminSubjectDel);

  rpc AdminSubjectList (rbp.rpc.voice_lover.ReqAdminSubjectList) returns (rbp.rpc.voice_lover.ResAdminSubjectList);

  rpc AdminAlbumCollect (rbp.rpc.voice_lover.ReqAdminAlbumCollect) returns (rbp.rpc.voice_lover.ResAdminAlbumCollect);

  rpc AdminAlbumChoice (rbp.rpc.voice_lover.ReqAdminAlbumChoice) returns (rbp.rpc.voice_lover.ResAdminAlbumChoice);

  rpc AdminAlbumCollectList (rbp.rpc.voice_lover.ReqAdminAlbumCollectList) returns (rbp.rpc.voice_lover.ResAdminAlbumCollectList);

  rpc AdminSubjectDetail (rbp.rpc.voice_lover.ReqAdminSubjectDetail) returns (rbp.rpc.voice_lover.ResAdminSubjectDetail);

  rpc AdminAlbumChoiceList (rbp.rpc.voice_lover.ReqAdminAlbumChoiceList) returns (rbp.rpc.voice_lover.ResAdminAlbumChoiceList);

  rpc AdminBannerList (rbp.rpc.voice_lover.ReqAdminBannerList) returns (rbp.rpc.voice_lover.ResAdminBannerList);

  rpc AdminBannerCreate (rbp.rpc.voice_lover.ReqAdminBannerCreate) returns (rbp.rpc.voice_lover.ResAdminBannerCreate);

  rpc AdminBannerUpdate (rbp.rpc.voice_lover.ReqAdminBannerUpdate) returns (rbp.rpc.voice_lover.ResAdminBannerUpdate);

  rpc AdminBannerDetail (rbp.rpc.voice_lover.ReqAdminBannerDetail) returns (rbp.rpc.voice_lover.ResAdminBannerDetail);

}